package patterns.behavioral.observer;

public interface Observer {
    void update(Observable observable);
}
